people page modified

--- a/people.html
+++ b/people.html
@@ -85,15 +85,15 @@
     <section class="people_area">
       <div class="container">
         <div class="top_filter_options">
-          <div class="search">
+          <!-- <div class="search">
             <div class="input_groups">
               <input type="text" placeholder="Search by name or keyword">
               <button type="button"><i class="fa fa-search"></i></button>
             </div>
-          </div>
+          </div> -->
           <div class="search_select">
             <div class="row">
-              <div class="col-lg-3">
+              <!-- <div class="col-lg-3">
                 <div class="select_box position-relative dropdown">
                   <button class="select_wrapper dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <p class="title">Practice <span>(1)</span> <span class="arrow"><i
@@ -192,8 +192,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-lg-3">
+              </div> -->
+              <div class="col-lg-4">
                 <div class="select_box position-relative dropdown">
                   <button class="select_wrapper dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <p class="title">Sector <span>(1)</span> <span class="arrow"><i class="fas fa-sort-down"></i></span>
@@ -293,7 +293,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                 <div class="select_box position-relative dropdown">
                   <button class="select_wrapper dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <p class="title">Advanced Delivery & Solutions <span>(1)</span> <span class="arrow"><i
@@ -301,99 +301,99 @@
                   </button>
                   <div class="select_checkboxes dropdown-menu">
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="antitrustCheckbox">
-                      <label class="form-check-label" for="antitrustCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Antitrust">
+                      <label class="form-check-label" for="Antitrust">
                         Antitrust and Competition
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="aiCheckbox">
-                      <label class="form-check-label" for="aiCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Artificial">
+                      <label class="form-check-label" for="Artificial">
                         Artificial Intelligence
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="bankingCheckbox">
-                      <label class="form-check-label" for="bankingCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Banking">
+                      <label class="form-check-label" for="Banking">
                         Banking and Finance
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="businessHumanRightsCheckbox">
-                      <label class="form-check-label" for="businessHumanRightsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Business">
+                      <label class="form-check-label" for="Business">
                         Business and Human Rights Law
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="capitalMarketsCheckbox">
-                      <label class="form-check-label" for="capitalMarketsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Capital">
+                      <label class="form-check-label" for="Capital">
                         Capital Markets
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="corporateMnACheckbox">
-                      <label class="form-check-label" for="corporateMnACheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Corporate">
+                      <label class="form-check-label" for="Corporate">
                         Corporate and M&A
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="corporateGovernanceCheckbox">
-                      <label class="form-check-label" for="corporateGovernanceCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Governance">
+                      <label class="form-check-label" for="Governance">
                         Corporate Governance and Compliance
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="emergingMarketsCheckbox">
-                      <label class="form-check-label" for="emergingMarketsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Emerging">
+                      <label class="form-check-label" for="Emerging">
                         Emerging Markets
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="employmentBenefitsCheckbox">
-                      <label class="form-check-label" for="employmentBenefitsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Employment">
+                      <label class="form-check-label" for="Employment">
                         Employment and Benefits
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="environmentalLawCheckbox">
-                      <label class="form-check-label" for="environmentalLawCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Climate">
+                      <label class="form-check-label" for="Climate">
                         Environmental, Climate and Regulatory Law
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="esgCheckbox">
-                      <label class="form-check-label" for="esgCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Social">
+                      <label class="form-check-label" for="Social">
                         Environmental, Social and Governance
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="fsrCheckbox">
-                      <label class="form-check-label" for="fsrCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Financial">
+                      <label class="form-check-label" for="Financial">
                         Financial Services Regulation
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="fundsAssetManagementCheckbox">
-                      <label class="form-check-label" for="fundsAssetManagementCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Funds">
+                      <label class="form-check-label" for="Funds">
                         Funds and Asset Management
                       </label>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                 <div class="select_box position-relative dropdown">
                   <button class="select_wrapper dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <p class="title">Office <span>(1)</span> <span class="arrow"><i class="fas fa-sort-down"></i></span>
@@ -401,92 +401,92 @@
                   </button>
                   <div class="select_checkboxes dropdown-menu">
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="antitrustCheckbox">
-                      <label class="form-check-label" for="antitrustCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Competition">
+                      <label class="form-check-label" for="Competition">
                         Antitrust and Competition
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="aiCheckbox">
-                      <label class="form-check-label" for="aiCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Intelligence">
+                      <label class="form-check-label" for="Intelligence">
                         Artificial Intelligence
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="bankingCheckbox">
-                      <label class="form-check-label" for="bankingCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Finance">
+                      <label class="form-check-label" for="Finance">
                         Banking and Finance
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="businessHumanRightsCheckbox">
-                      <label class="form-check-label" for="businessHumanRightsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Human">
+                      <label class="form-check-label" for="Human">
                         Business and Human Rights Law
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="capitalMarketsCheckbox">
-                      <label class="form-check-label" for="capitalMarketsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Markets">
+                      <label class="form-check-label" for="Markets">
                         Capital Markets
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="corporateMnACheckbox">
-                      <label class="form-check-label" for="corporateMnACheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="M&A">
+                      <label class="form-check-label" for="M&A">
                         Corporate and M&A
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="corporateGovernanceCheckbox">
-                      <label class="form-check-label" for="corporateGovernanceCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Compliance">
+                      <label class="form-check-label" for="Compliance">
                         Corporate Governance and Compliance
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="emergingMarketsCheckbox">
-                      <label class="form-check-label" for="emergingMarketsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="EmergingMarkets">
+                      <label class="form-check-label" for="EmergingMarkets">
                         Emerging Markets
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="employmentBenefitsCheckbox">
-                      <label class="form-check-label" for="employmentBenefitsCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Benefits">
+                      <label class="form-check-label" for="Benefits">
                         Employment and Benefits
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="environmentalLawCheckbox">
-                      <label class="form-check-label" for="environmentalLawCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Regulatory">
+                      <label class="form-check-label" for="Regulatory">
                         Environmental, Climate and Regulatory Law
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="esgCheckbox">
-                      <label class="form-check-label" for="esgCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Environmental">
+                      <label class="form-check-label" for="Environmental">
                         Environmental, Social and Governance
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="fsrCheckbox">
-                      <label class="form-check-label" for="fsrCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Regulation">
+                      <label class="form-check-label" for="Regulation">
                         Financial Services Regulation
                       </label>
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="fundsAssetManagementCheckbox">
-                      <label class="form-check-label" for="fundsAssetManagementCheckbox">
+                      <input class="form-check-input" type="checkbox" value="" id="Management">
+                      <label class="form-check-label" for="Management">
                         Funds and Asset Management
                       </label>
                     </div>
