--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
       <div class="container ps-0">
         <a class="navbar-brand me-0" href="index.html">
-          <img src="images/logo.png" alt="logo" width="120">
+          <img src="images/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
           aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,9 +61,71 @@
         </div>
       </div>
     </nav>
+    <div class="container d-lg-none">
+      <div class="row justify-content-center py-3 py-lg-4">
+        <div class="col-12">
+          <div class="logo-wrapper w-100 d-flex flex-wrap flex-sm-nowrap">
+            <div class="ms-auto mobile-topbar me-4">
+              <div class="bars">
+                <i class="fas fa-bars"></i>
+              </div>
+            </div>
+            <!-- <div class="logo me-sm-2">
+              <a href="index.php">
+                <img src="images/main-logo.png" alt="header">
+              </a>
+            </div>
+            <div class="header-form">
+              <form action="#">
+                <div class="form-main d-flex justify-content-between">
+                  <div class="input-field">
+                    <input type="text" class="form-control rounded-0 shadow-none" placeholder="I'm searching for...">
+                  </div>
+                  <div class="search d-flex justify-content-center align-items-center">
+                    <img src="./images/search.png" alt="not found">
+                  </div>
+                </div>
+              </form>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
   <!-- header area end -->
 
+ <!-- mobile navbar part start -->
+
+ <div class="mobile-menu d-lg-none">
+
+  <div class="mobile-menu-overlay"></div>
+
+  <div class="mobile-menu-main">
+    <div class="close-m-menu text-end"><i class="fas fa-times"></i></div>
+    <div class="menu-body">
+      <div class="menu-list">
+        <ul class="list-unstyled">
+          <li class="mobile-sub-menu">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="mobile-sub-menu">
+            <a href="#">About Us<i class="fas fa-sort-down float-end"></i></a>
+            <ul class="list-unstyled">
+              <li><a href="about.html">About</a></li>
+              <li><a href="founder-message.html">Message from the Founder</a></li>
+              <li><a href="people.html">People</a></li>
+            </ul>
+          </li>
+          <li class="mobile-sub-menu"><a href="areas-of-practice.html">Areas of Practice</a></li>
+          <li class="mobile-sub-menu"><a href="projects.html">Projects</a></li>
+          <li class="mobile-sub-menu"><a href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- mobile navbar part end -->
 
   <!-- main area start -->
   <main>
@@ -129,7 +191,7 @@
           <div class="item_text">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-lg-7">
+                <div class="col-lg-9 col-xl-7">
                   <div class="text text-center">
                     <h1 class="title animate__animated" data-animation-in="animate__fadeInUp">Fuelled by inspiration
                       derived
@@ -283,8 +345,8 @@
         
         <div class="bg-static w-100">
           <div class="area-wrapper">
-            <div class="row justify-content-center">
-              <div class="col-4 px-0">
+            <div class="row justify-content-center mx-3 mx-xxl-0">
+              <div class="col-12 col-xl-6 col-xxl-4 px-0">
                 <a class="image" href="#">
                   <img src="./images/area1.jpg" alt="farooq">
                   <div class="overly">
@@ -296,7 +358,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-2 px-0">
+              <div class="col-6 col-xl-3 col-xxl-2 px-0">
                 <a class="image" href="#">
                   <img src="./images/area2.jpg" alt="farooq">
                   <div class="overly">
@@ -304,7 +366,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-2 px-0">
+              <div class="col-6 col-xl-3 col-xxl-2 px-0">
                 <a class="image" href="#">
                   <img src="./images/area3.jpg" alt="farooq">
                   <div class="overly">
@@ -313,8 +375,8 @@
                 </a>
               </div>
             </div>
-            <div class="row justify-content-center">
-              <div class="col-2 px-0">
+            <div class="row justify-content-center mx-3 mx-xxl-0">
+              <div class="col-6 col-xl-3 col-xxl-2 px-0">
                 <a class="image" href="#">
                   <img src="./images/area4.png" alt="farooq">
                   <div class="overly">
@@ -322,7 +384,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-2 px-0">
+              <div class="col-6 col-xl-3 col-xxl-2 px-0">
                 <a class="image" href="#">
                   <img src="./images/area5.jpg" alt="farooq">
                   <div class="overly">
@@ -330,7 +392,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-4 px-0">
+              <div class="col-12 col-xl-6 col-xxl-4 px-0">
                 <a class="image" href="#">
                   <img src="./images/area6.jpg" alt="farooq">
                   <div class="overly">
@@ -352,7 +414,7 @@
       <!-- <div class="container"> -->
        
       <div class="row justify-content-center">
-        <div class="col-lg-4">
+        <div class="col-md-6 col-xxl-5">
           <div class="text">
             <h3 class="title text-center">Foreign Investment – an area of expertise and a social endeavour</h3>
             <p class="text-center">Bangladesh, a developing country and an emerging economy with promising potential, attracts a notable amount of foreign investment, however, with the existing, often unwieldy, regulatory environment, foreign investors regularly find themselves in precarious situations through which they have to navigate their investments.</p>
@@ -377,7 +439,7 @@
           </div>
         </div>
         <div class="row g-4">
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
@@ -389,7 +451,7 @@
               </a>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
@@ -401,7 +463,7 @@
               </a>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
@@ -413,7 +475,7 @@
               </a>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
@@ -438,13 +500,13 @@
         <div class="row">
           <div class="col-lg-11">
             <div class="row">
-              <div class="col-lg-3">
+              <div class="col-6 col-md-3 col-lg-3">
                 <div class="image">
                   <img src="images/founder.jpeg" alt="founder" class="img-fluid w-100">
                 </div>
               </div>
-              <div class="col-lg-9">
-                <div class="text ps-lg-4">
+              <div class="col-md-9 col-lg-9">
+                <div class="text ps-lg-4 pt-3">
                   <h3 class="title">Our Founder</h3>
                   <h4 class="subtitle">Mohammad Ozair Farooq</h4>
                   <p>Mr. Mohammad Ozair Farooq established these Chambers in the year of 1973. Within a few short years
@@ -479,7 +541,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
-            <div class="footer-widget pe-4">
+            <div class="footer-widget">
               <h3 class="footer-title">Main Office</h3>
               <div class="contact_us">
                 <ul class="list-unstyled">
@@ -509,7 +571,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="footer-widget px-5">
+            <div class="footer-widget ps-lg-5 pt-4 pt-lg-0">
               <h3 class="footer-title">Supreme Court Office</h3>
               <div class="contact_us">
                 <ul class="list-unstyled">
@@ -534,11 +596,11 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="footer-widget ps-5">
+            <div class="footer-widget ps-lg-5 pt-4 pt-lg-0">
               <h3 class="footer-title">Accessibility</h3>
               <p>There is step-free access to chambers from the ground floor.</p>
             </div>
-            <div class="footer-widget mt-4 ps-5">
+            <div class="footer-widget ps-lg-5 pt-4">
               <h3 class="footer-title">Legal</h3>
               <ul class="list-unstyled services">
                 <li><a href="#">Privacy Policy</a></li>
